# crud-python

./: README.md  docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  schemas.py
