[tool.poetry]
name = "crud-python"
version = "0.1.0"
description = ""
authors = ["Alexandre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
psycopg2-binary = "^2.9.9"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
